changed target release to 8 and removed code that only appears in version 11